docs: update guides and playbook