@@ -8,6 +8,28 @@ This guide outlines how to integrate ErrorProne and NullAway into your Java proj
 
 ---
 
+## 0. Prerequisites
+
+### Compiler JVM Runtime (JSpecify Mode Prerequisites)
+When `JSpecifyMode` is enabled, NullAway requires the compiler to preserve type-use annotations inside compiled bytecode symbols. Compatibility and setup requirements depend on your build environment:
+* **JDK 22 or higher**: Fully supported natively out-of-the-box (no extra compiler arguments needed).
+* **JDK 17 and 21**: Supported conditionally:
+  * You must pass the compiler argument `-XDaddTypeAnnotationsToSymbol=true` in `compilerArgs`.
+  * **OpenJDK Only**: This flag is only supported by OpenJDK distributions (e.g., Eclipse Temurin, Amazon Corretto, Azul Zulu) as of releases 21.0.8 / 17.0.19. It is not supported by Oracle JDK.
+  * **Generics Fallback**: If you compile on JDK 17 or 21 without this argument (or if using Oracle JDK), NullAway will compile successfully but will skip/ignore generics and type-use nullability checks on compiled dependency symbols.
+* **NullAway Version**: Use `0.11.0` or higher on JDK 21+ to avoid compiler crashes (like `NullPointerException` or `castToNonNull failed!` in `GenericsChecks`) due to a known generics analysis bug.
+* **JDK 11**: Not Supported for JSpecify generics/type-use symbol checking. The compiler flag `-XDaddTypeAnnotationsToSymbol=true` does not exist in JDK 11.
+* **JDK 8**: Not Supported. Modern ErrorProne releases (v2.11.0+) require JDK 11+ to run, and a compiler running on a JDK 8 JVM cannot load the plugin.
+
+### ErrorProne & JDK Compatibility
+ErrorProne interacts directly with the Java compiler's internal APIs. Depending on your build environment, keep the following requirements in mind:
+* **JDK 11+ Requirement**: Modern versions of ErrorProne (v2.11.0+) require building with JDK 11 or higher.
+* **JDK 16+ (JVM Exports)**: Since JDK 16, Java enforces strict encapsulation of compiler internals. If compiling on JDK 16 or higher, you must supply compiler exports (`--add-exports` and `--add-opens`) to give ErrorProne access to the compiler modules. See the Maven configuration in Section 2 for the exact list of export arguments.
+* **JDK 21 Compatibility**: If building with JDK 21, use ErrorProne version 2.22.0 or higher to ensure compatibility with compiler changes and prevent internal crashes.
+* **JDK 8 Support**: If you must compile on a JDK 8 JVM runtime, you must use a legacy version of ErrorProne (2.10.0 or lower). Modern versions of ErrorProne (v2.11.0+) require JDK 11+ to run.
+
+---
+
 ## 1. Basic ErrorProne Setup
 ErrorProne hooks into the compilation process to identify bug patterns. This is configured directly inside the `maven-compiler-plugin`.
 
@@ -17,7 +39,7 @@ Add ErrorProne to the `<annotationProcessorPaths>` of the `maven-compiler-plugin
 <plugin>
   <groupId>org.apache.maven.plugins</groupId>
   <artifactId>maven-compiler-plugin</artifactId>
-  <version>${maven-compiler-plugin.version}</version> <!-- Or omit if managed by parent POM -->
+  <version>${maven-compiler-plugin.version}</version>
   <configuration>
     <annotationProcessorPaths>
       <path>
@@ -48,7 +70,7 @@ NullAway runs as an annotation processor plug-in inside ErrorProne. To configure
 2. Pass flags enabling NullAway and setting packages to scan.
 
 ### [Optional] Understanding NullAway JSpecify Mode
-By default, NullAway checks nullability using legacy checking rules. Passing `-XepOpt:NullAway:JSpecifyMode=true` enables **JSpecify Mode**, which aligns NullAway's static analysis with the JSpecify 1.0 specifications:
+By default, NullAway checks nullability using legacy checking rules. Passing `-XepOpt:NullAway:JSpecifyMode=true` enables JSpecify Mode, which aligns NullAway's static analysis with the JSpecify 1.0 specifications:
 * **Generics Nullability**: Enables checking annotations inside generic parameters (e.g. `List<@Nullable String>`).
 * **Subclass Compatibility**: Enforces strict Liskov Substitution Principle compliance, ensuring subclasses do not accept fewer nulls or return more nulls than their parent class methods.
 * **Array element checks**: Validates nullability contracts on array references and array type arguments.
@@ -59,7 +81,7 @@ By default, NullAway checks nullability using legacy checking rules. Passing `-X
 <plugin>
   <groupId>org.apache.maven.plugins</groupId>
   <artifactId>maven-compiler-plugin</artifactId>
-  <version>${maven-compiler-plugin.version}</version> <!-- Or omit if managed by parent POM -->
+  <version>${maven-compiler-plugin.version}</version>
   <configuration>
     <fork>true</fork>
     <compilerArgs>
@@ -103,7 +125,8 @@ dependencies {
   errorprone("com.uber.nullaway:nullaway:${nullaway.version}")
 }
 ```
-Configure the compiler plugin to run ErrorProne as a compiler plugin and NullAway as an annotation processor.  
+Configure the compiler plugin to run ErrorProne as a compiler plugin and NullAway as an annotation processor.
+
 * **Classpath Note**: Ensure `error_prone_api` is on the classpath to prevent runtime failures.
 * **Recommendation for Build Severity**: If your project has many existing violations, default to `WARN` initially. Upgrade to `ERROR` to break the build only after those issues are resolved.
 
@@ -156,12 +179,3 @@ mvn clean compile
   2. Run the build with `mvn clean compile -X` and search the output logs for `-Xplugin:ErrorProne` or `NullAway`. If Maven is passing those arguments to the compiler, the checker is active.
 * **Failure**: The compiler fails with clear error messages pointing to code lines. Ex:
   `[ERROR] /path/to/File.java:[45,12] error: [NullAway] passing @Nullable parameter to a @NonNull method`
-
----
-
-## 5. Supported JDK Versions & Compiler Requirements
-When `JSpecifyMode` is enabled, NullAway requires the compiler to support reading type-use annotations from bytecode symbols:
-* **JDK 22 or higher**: Fully supported natively.
-* **JDK 17 and 21**: You must pass `-XDaddTypeAnnotationsToSymbol=true` in `compilerArgs`.
-  * **Important**: This flag is only supported by OpenJDK builds (e.g. Temurin, Zulu) as of release 21.0.8 / 17.0.19. It is not supported by Oracle JDK.
-* **NullAway Version**: Use **`0.11.0` or higher** on JDK 21+ to avoid compiler crashes due to a known `NullPointerException` inside the analyzer's generics checks (e.g., `castToNonNull failed!` in `GenericsChecks`).
